Renamed x86 to i386 to sync with the OSCAR naming scheme.  Also made a mention of using the OS_Detect naming scheme as a basis for arch information.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@5935 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 5e58bdddc73fd1b69c68bdf05fda73e8312cb5ec

--- a/src/pkg-set/README
+++ b/src/pkg-set/README
@@ -9,10 +9,14 @@ The filename should be a short descriptive name for your package set that
 includes some other identifying information.  Use this rule to name your
 package set:
 
-short_description + '-' + distro + '-' + arch + '.xml'
+short_description + '-' + distro + '-' + distro-version + '-' + arch + '.xml'
+
+Ex. xen-fedora-6-i386.xml
 
 This makes it easy to find the exact package set desired and matches well with
 the name of the package set (described below).
+
+The arch name should match the system used by OS_Detect.
 
 == Package Set Names ==
 
