- Include the doxygen documentation (to generate it, go in the src directory and execute 'doxygen ./doxygen_config'. - Create a xorm namespace for all the classes defined in the framework of XORM.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6494 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: f7e07f47bf07777a402d856dbed75dc9eb6ce995

--- a/src/ORM/ChangeLog
+++ b/src/ORM/ChangeLog
@@ -1,6 +1,9 @@
 06 Nov 2007 (Geoffroy Vallee):
 - Include a widget for asking user to be patient when querying repositories.
 - Cleanup the code (more in the OO spirit).
+- Include the doxygen documentation (to generate it, go in the src directory and
+  execute 'doxygen ./doxygen_config'.
+- Create a xorm namespace for all the classes defined in the framework of XORM.
 
 02 Nov 2007 (Geoffroy Vallee):
 - Implementation of the first Qt GUI for OPD2:
