[xoscar] Update the TODO list.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6592 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 986cc05439f86271fa7cad84d8e7853185b5c8ec

--- a/src/xoscar/TODO
+++ b/src/xoscar/TODO
@@ -1,6 +1,8 @@
 * Enable the cluster management. It depends on OPM which is not yet available.
 * Change the default size, the current one is too big for the normal display 
   configuration.
+  Status: basic implementation done; needs testing (does it fit most of the
+  display resolutions?).
 * Implement a transparent remote OSCAR command execution mechanism that will 
   allow users to use the GUI on their laptop and to give remotely OSCAR.
 
