[xoscar] First set of modifications to enable the display of information about existing partitions within an OSCAR cluster.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6618 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: efa4d7ebd914f37eb395af6600212d207d060b73

--- a/src/xoscar/TODO
+++ b/src/xoscar/TODO
@@ -1,4 +1,9 @@
 * Enable the cluster management. It depends on OPM which is not yet available.
+  Sub-tasks:
+    - When clicking on the partition name, display partition name and number 
+      of nodes in the appropriate widgets.
+    - Find a way to include icons the proper manner.
+    - Enable the "+" and "-" icons for partition management.
 * Change the default size, the current one is too big for the normal display 
   configuration.
   Status: basic implementation done; needs testing (does it fit most of the
