[xoscar] Now display the following partition information when a partition is selected: partition name and number of nodes. We still do not handle the Linux distribution id of the partition.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6625 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 09d20f8375453b7b8eec2f1d490c12f646848c58

--- a/src/xoscar/TODO
+++ b/src/xoscar/TODO
@@ -1,7 +1,6 @@
 * Enable the cluster management. It depends on OPM which is not yet available.
   Sub-tasks:
-    - When clicking on the partition name, display partition name and number 
-      of nodes in the appropriate widgets.
+    - When clicking on the partition name, display the distribution used for the partition. 
     - Enable the "+" and "-" icons for partition management.
 * Change the default size, the current one is too big for the normal display 
   configuration.
