--- a/src/xoscar/TODO
+++ b/src/xoscar/TODO
@@ -6,12 +6,14 @@
         * MAC address collection: disable the "Network" and "Manual" options.
         * query the database to get already defined MAC and IP addresses
     - When selected a file with MAC addresses:
-        * display them in the "Unassigned MAC Addresses" widget,
         * allow one to assign a MAC address from the "Unassigned MAC Addresses" 
           widget to a node.
     - Find a way to assign IPs (do not know how to do that right now, current it
       is not possible to let users specify them want to use IPs from x.x.x.x to
       x.x.x.x+number_of_nodes).
+* Check if the database is ready (extend oscar-config) for that. If not, it 
+  should be setup automatically (cf. $OSCAR_HOME/script/create_oscar_database +
+  check root does not need a password to access the database).
 * Implement a transparent remote OSCAR command execution mechanism that will 
   allow users to use the GUI on their laptop and to give remotely OSCAR.
 
