Minor correction in the README file. yume install oscar-base doesn't install the libraries and scripts...
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/branches/branch-5-1@6785 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 28f31a6d9efb762d2fc716ed8814815360715b21

--- a/README
+++ b/README
@@ -35,7 +35,7 @@ http://svn.oscar.openclustergroup.org/trac/oscar/wiki/InstallGuidePreparing#Dist
 for instructions.
 
 5) install oscar-base rpm
-yume --repo /tftpboot/oscar/common-rpms install oscar-base
+yume --repo /tftpboot/oscar/common-rpms install oscar-base*
 
 6) start installation, for example:
 cd /opt/oscar
