--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oscar (5.1~svn20080207-0gv1) stable; urgency=low
+
+  * Remove useless dependencies to perl and libqt-perl. 
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Thu,  7 Feb 2008 20:45:57 -0500
+
 oscar (5.1~svn20070822-0gv1) stable; urgency=low
 
   * New upstream development release 
