--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,39 @@
+oscar (5.1~svn20080724-0gv5) gutsy; urgency=low
+
+  * Correctly install yume and rapt.
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Thu, 24 Jul 2008 17:06:29 -0400
+
+oscar (5.1~svn20080724-0gv4) gutsy; urgency=low
+
+  * New upstream version (trunk).
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Thu, 24 Jul 2008 16:37:07 -0400
+
+oscar (5.1~svn20080724-0gv3) gutsy; urgency=low
+
+  * Include a configuration file.
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Thu, 24 Jul 2008 16:33:08 -0400
+
+oscar (5.1~svn20080724-0gv2) gutsy; urgency=low
+
+  * New upstream version (trunk).
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Thu, 24 Jul 2008 16:10:29 -0400
+
+oscar (5.1~svn20080724-0gv1) gutsy; urgency=low
+
+  * New upstream version (trunk).
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Thu, 24 Jul 2008 13:31:15 -0400
+
+oscar (5.1~svn20080723-0gv2) gutsy; urgency=low
+
+  * New upstream version (trunk).
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Wed, 23 Jul 2008 11:44:04 -0400
+
 oscar (5.1~svn20080723-0gv1) gutsy; urgency=low
 
   * New upstream version (trunk).
