--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,21 @@
+oscar (5.1~svn20080730-0gv3) gutsy; urgency=low
+
+  * New upstream version (trunk).
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Wed, 30 Jul 2008 18:29:49 -0400
+
+oscar (5.1~svn20080730-0gv2) gutsy; urgency=low
+
+  * New upstream version (trunk).
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Wed, 30 Jul 2008 15:17:36 -0400
+
+oscar (5.1~svn20080730-0gv1) gutsy; urgency=low
+
+  * New upstream version (trunk).
+
+ -- Geoffroy Vallee [gvh] <gvh@gvh1.ornl.gov>  Wed, 30 Jul 2008 13:33:21 -0400
+
 oscar (5.1~svn20080724-0gv5) gutsy; urgency=low
 
   * Correctly install yume and rapt.
