--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+oscar (5.1~svn20080805-0gv1) hardy; urgency=low
+
+  * New upstream version (trunk).
+  * Fix a minor problem with the rules file on Ubuntu-8.04
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Tue, 05 Aug 2008 23:07:09 -0400
+
 oscar (5.1~svn20080730-0gv3) gutsy; urgency=low
 
   * New upstream version (trunk).
