--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,21 @@
+oscar (5.1~svn20080811-0gv1) hardy; urgency=low
+
+  * New upstream versio (trunk).
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Mon, 11 Aug 2008 01:13:15 -0400
+
+oscar (5.1~svn20080810-0gv2) hardy; urgency=low
+
+  * New upstream version (trunk). 
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Sun, 10 Aug 2008 12:23:03 -0400
+
+oscar (5.1~svn20080810-0gv1) hardy; urgency=low
+
+  * New upstream version (trunk).
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Sun, 10 Aug 2008 11:26:40 -0400
+
 oscar (5.1~svn20080807-0gv1) gutsy; urgency=low
 
   * New upstream version (trunk).
