Cut new Debian packages based on trunk.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7302 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 58bc140fd08def331fa9b3ce707c0910df70f4b7

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oscar (5.1~svn20080813-0gv1) gutsy; urgency=low
+
+  * New upstream version (trunk).
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Wed, 13 Aug 2008 13:51:06 -0400
+
 oscar (5.1~svn20080811-0gv1) hardy; urgency=low
 
   * New upstream versio (trunk).
