--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oscar (5.1~svn20080815-0gv1) hardy; urgency=low
+
+  * New upstream version (trunk).
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Fri, 15 Aug 2008 08:52:26 -0400
+
 oscar (5.1~svn20080813-0gv1) gutsy; urgency=low
 
   * New upstream version (trunk).
