Create a new set of Debian package for OSCAR core.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7312 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 6294f7e7567f7f34967d91d05114c11366ed282b

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oscar (5.1~svn20080820-0gv1) gutsy; urgency=low
+
+  * New upstream version (trunk). 
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Wed, 20 Aug 2008 09:59:27 -0400
+
 oscar (5.1~svn20080815-0gv1) hardy; urgency=low
 
   * New upstream version (trunk).
