Continue to fix issues with Debian packages for the OSCAR core.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7315 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 08a1b6de294c7c772f2c1dd4d5d6a09689d1ba46

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,8 @@
 oscar (5.1~svn20080821-0gv1) gutsy; urgency=low
 
-  * Fix a problem during the installation of binaries in the oscar-bin 
-packages.
+  * Fix a problem during the installation of binaries in the oscar-bin packages.
 
- -- Geoffroy Vallee <valleegr@gornl.gov>  Thu, 21 Aug 2008 09:52:57 -0400
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Thu, 21 Aug 2008 09:52:57 -0400
 
 oscar (5.1~svn20080820-0gv1) gutsy; urgency=low
 
