Improve oscar basic Debian packages.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7355 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: fea765a95fcbd8bd1bd4fd8f74fbb79f4eaeaf29

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+oscar (5.1~svn20080901-0gv1) hardy; urgency=low
+
+  [ Geoffroy Vallee ]
+  * The oscar-base package now have dependencies with other basic binary packages.
+  * Include the oscar samples into the 'oscar' package.
+
+ -- gvallee <gvallee@hugo>  Mon, 01 Sep 2008 14:28:08 -0400
+
 oscar (5.1~svn20080821-0gv1) gutsy; urgency=low
 
   * Fix a problem during the installation of binaries in the oscar-bin packages.
