--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,15 @@
+oscar (5.1~svn20080901-0gv2) hardy; urgency=low
+
+  * Remove old symlinks added in the package because of old stuff.
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Mon, 01 Sep 2008 20:29:24 -0400
+
 oscar (5.1~svn20080901-0gv1) hardy; urgency=low
 
-  [ Geoffroy Vallee ]
   * The oscar-base package now have dependencies with other basic binary packages.
   * Include the oscar samples into the 'oscar' package.
 
- -- gvallee <gvallee@hugo>  Mon, 01 Sep 2008 14:28:08 -0400
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Mon, 01 Sep 2008 14:28:08 -0400
 
 oscar (5.1~svn20080821-0gv1) gutsy; urgency=low
 
