--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oscar (5.1~svn20080923-0gv1) hardy; urgency=low
+
+  * New upstream version (trunk).
+
+ -- gvallee <gvallee@hugo>  Tue, 23 Sep 2008 20:15:40 -0400
+
 oscar (5.1~svn20080901-0gv2) hardy; urgency=low
 
   * Remove old symlinks added in the package because of old stuff.
