--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oscar (5.2~svn20080926-0gv3) hardy; urgency=low
+
+  * New upstream version (trunk). 
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Fri, 26 Sep 2008 23:58:07 -0400
+
 oscar (5.2~svn20080926-0gv1) hardy; urgency=low
 
   * New upstream version (trunk).
