[OSCARonDebian] Create a new set of packages for OSCAR base.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7503 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: e33feba44cc11e95cb9c19928837e2b61346eeb2

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oscar (5.2~svn20081001-0gv1) gutsy; urgency=low
+
+  * New upstream version (trunk)
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Wed, 01 Oct 2008 16:38:13 -0400
+
 oscar (5.2~svn20080930-0gv1) gutsy; urgency=low
 
   * New upstream version (trunk)
