[OSCARonDebian] Create a new set of packages for OSCAR base.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7510 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: f8a71dfea333971b79ef24ad67225fd09ca20340

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oscar (5.2~svn20081008-0gv1) hardy; urgency=low
+
+  * New upstream version (trunk).
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Tue, 07 Oct 2008 18:33:57 -0400
+
 oscar (5.2~svn20081005-0gv1) gutsy; urgency=low
 
   * New upstream version (trunk).
