--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oscar (5.2~svn20081010-0gv1) hardy; urgency=low
+
+  * New upstream version (trunk).
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Thu, 09 Oct 2008 19:16:35 -0400
+
 oscar (5.2~svn20081008-0gv1) hardy; urgency=low
 
   * New upstream version (trunk).
