--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oscar (5.2~svn20081130-0gv1) hardy; urgency=low
+
+  * New upstream version (trunk). 
+
+ -- Geoffroy Vallee [gvh] <gvh@gvh1.ornl.gov>  Sun, 30 Nov 2008 00:07:14 -0500
+
 oscar (5.2~svn20081010-0gv1) hardy; urgency=low
 
   * New upstream version (trunk).
