--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oscar (5.2~svn20081204-0gv1) hardy; urgency=low
+
+  * New upstream version (trunk).
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Thu, 04 Dec 2008 15:04:28 -0500
+
 oscar (5.2~svn20081130-0gv1) hardy; urgency=low
 
   * New upstream version (trunk). 
