--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oscar (5.2~svn20081204-0gv2) hardy; urgency=low
+
+  * New upstream version (trunk).
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Fri, 05 Dec 2008 13:43:14 -0500
+
 oscar (5.2~svn20081204-0gv1) hardy; urgency=low
 
   * New upstream version (trunk).
