Move the update of the SystemConfigurator configuration file to SystemInstaller.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7693 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: c59521fceb041d25a672acec7d7cce61f5b4e081

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-oscar (5.2~svn20081204-0gv2) hardy; urgency=low
+oscar (5.2~svn20081210-0gv1) hardy; urgency=low
+
+  * New upstream version (trunk).
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Tue, 09 Dec 2008 11:09:02 -0500
+
+oscar (5.2~svn20081205-0gv1) hardy; urgency=low
 
   * New upstream version (trunk).
 
