[OSCARonDebian] Create a new set of packages for oscar-6.0 beta 1.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7766 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 2116f17bc09a44f45c3ab15dd1344f9f90ea1aaa

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oscar (6.0~svn20081226beta1-0gv1) hardy; urgency=low
+
+  * New upstream version (6.0 beta 1).
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Fri, 26 Dec 2008 15:16:33 -0500
+
 oscar (5.2~svn20081210-0gv1) hardy; urgency=low
 
   * New upstream version (trunk).
