Continue to prepare the release of OSCAR-6.0.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7775 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: d77cfb1e3a55cf24aacea7d708237ded23f5c575

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oscar (6.0-1) hardy; urgency=low
+
+  * New upstream version.
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Mon, 05 Jan 2009 15:28:04 -0500
+
 oscar (6.0~svn20081226beta1-0gv1) hardy; urgency=low
 
   * New upstream version (6.0 beta 1).
