Update the ChangeLog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7812 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 17859faaff37ea051ea1e9a63ac64ca6b6e00e6b

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,7 @@ tree, i.e., Configurator is now a prereq.
 is a package is not locally available. 
 - [Torque OPKG] Update the list of prereqs for the creation of the binary
 packages (build.cfg).
+- Improve the image management unit test.
 
 6.0:
 - Full support of on-line repositories.
