Update the ChangeLog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7817 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 0bb2882dd56fe836fe235cd6c07fe3f71d477d4c

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,9 @@ is a package is not locally available.
 - [Torque OPKG] Update the list of prereqs for the creation of the binary
 packages (build.cfg).
 - Improve the image management unit test.
+- [Ticket #463] Finish to remove all binary packages from the source tree,
+oscar-packager provides the needed abstractions for the creation of binary
+packages.
 
 6.0:
 - Full support of on-line repositories.
