Update the ChangeLog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7818 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: a5e6ed3a9d826b4d3a202071c6c4763c983bd3ef

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,8 @@ packages (build.cfg).
 - [Ticket #463] Finish to remove all binary packages from the source tree,
 oscar-packager provides the needed abstractions for the creation of binary
 packages.
+- Prereqs on RPM systems in dumb mode now try to use yum if a package is not
+locally available.
 
 6.0:
 - Full support of on-line repositories.
