--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,8 @@ oscar-packager provides the needed abstractions for the creation of binary
 packages.
 - Prereqs on RPM systems in dumb mode now try to use yum if a package is not
 locally available.
+- [Ticket #502] Binary packages for oscar-base do not over-write the
+/etc/oscar/oscar.conf file anymore.
 
 6.0:
 - Full support of on-line repositories.
