--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,9 @@ oscar-packager provides the needed abstractions for the creation of binary
 packages.
 - Prereqs on RPM systems in dumb mode now try to use yum if a package is not
 locally available.
+- Include the patch from Felipe Zipitria: avoid warnings on some configuration
+when using OSCAR::ConfigFile.
+- Improve the perldoc documentation of different OSCAR Perl modules.
 - [Ticket #502] Binary packages for oscar-base do not over-write the
 /etc/oscar/oscar.conf file anymore.
 
