Update the changelog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7836 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 3d9426b4158e45234a5d040967a9d089826b46c9

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,7 +9,7 @@ tree, i.e., Configurator is now a prereq.
 is a package is not locally available. 
 - [Torque OPKG] Update the list of prereqs for the creation of the binary
 packages (build.cfg).
-- Improve the image management unit test.
+- Improve unit tests.
 - [Ticket #463] Finish to remove all binary packages from the source tree,
 oscar-packager provides the needed abstractions for the creation of binary
 packages.
