Update the ChangeLog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7875 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 0dcfa3c579524ab14eff2ab8bee774039977a913

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 6.0.1 (not yet released):
+- Fix a bug when generating the DHCPD configuration file on Debian.
 - New abstraction for the management of system services.
 - Include capabilities for file management: download and type detection.
 - [Ticket #506] Include a "virtual" OSCAR RPM that allows the installation of
