--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oscar (6.0.1~svn20090121-0gv1) hardy; urgency=low
+
+  * New upstream version (trunk).
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Wed, 21 Jan 2009 10:12:14 -0500
+
 oscar (6.0-1) hardy; urgency=low
 
   * New upstream version.
