--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 6.0.1 (not yet released):
+- Update ODA to 1.3.4.
+- Update PackMan to 3.1.5.
+- Update Yume to 2.8.4.
+- Update Selector to 1.0.2.
 - During bootstrapping, a log file is now created 
 (/var/log/oscar/bootstrap.log).
 - Include two new options to the oscar-config script: debug and verbose.
