Cut a new set of Debian package for OSCAR trunk.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7901 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 7645f5cb80e48b646f750b457f31949d7548fd94

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oscar (6.0.1~svn20090128-0gv1) hardy; urgency=low
+
+  * New upstream version (trunk).
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Wed, 28 Jan 2009 12:11:27 -0500
+
 oscar (6.0.1~svn20090121-0gv1) hardy; urgency=low
 
   * New upstream version (trunk).
