--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 6.0.1 (not yet released):
+- Clean up the Makefile portion related to the generation of RPMs for
+oscar-base.
+- Clean up the spec file for oscar-base.
 - Update ODA to 1.3.4.
 - Update PackMan to 3.1.5.
 - Update Yume to 2.8.4.
