Add basic support for Fedora Core 9.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7931 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: cabb11549f2dcde88c6b302f52aec2991c58a61a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 6.0.1 (not yet released):
+- Add RPMs for OSCAR core on Fedora Core 9 (both i386 and x86_64).
+- Update the RPM list for rhel-5-x86_64 and compatible distributions.
 - Merge oscar-base.spec.in and oscar.spec.in.
 - Clean up the Makefile portion related to the generation of RPMs for
 oscar-base.
