--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oscar (6.0.1-1) hardy; urgency=low
+
+  * New upstream version.
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Fri, 06 Feb 2009 14:45:39 -0500
+
 oscar (6.0.1~svn20090128-0gv1) hardy; urgency=low
 
   * New upstream version (trunk).
