- Modify the Makefile so we can choose the directory where the binary packages are stored. - Enable the creation of unsigned Debian packages by setting the UNSIGNED_OSCAR_PKG environment variable.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7954 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 663a3e72cd926c8b5036c2d7b01f4df1ffd5eb40

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
-6.0.1 (not yet released):
+6.0.2 (not yet released):
+- Modify the Makefile so we can choose the directory where the binary packages
+are stored.
+- Enable the creation of unsigned Debian packages by setting the
+UNSIGNED_OSCAR_PKG environment variable.
+
+6.0.1:
 - Add RPMs for OSCAR core on Fedora Core 9 (both i386 and x86_64).
 - Update the RPM list for rhel-5-x86_64 and compatible distributions.
 - Merge oscar-base.spec.in and oscar.spec.in.
