- Etend the Utils Perl module. - Improve Perldoc documentation.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7955 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 6e19cb95f5529844446812cf39fffb2b9204083f

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 6.0.2 (not yet released):
+- Etend the Utils Perl module.
+- Improve Perldoc documentation.
 - Modify the Makefile so we can choose the directory where the binary packages
 are stored.
 - Enable the creation of unsigned Debian packages by setting the
