--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 6.0.2 (not yet released):
+- Improve the unit tests.
 - Code clean-up.
 - Prereqs: decrease the output by default.
 - Prereqs: update the prereq API to make more coherent
