Update the ChangeLog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7979 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 3b337a0d72dded1432e3a04a5ac2b42334499268

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 6.0.2 (not yet released):
+- Fix a bug in OS_Settings when falling back to the default settings.
+- Update SystemInstaller to 2.3.10.
 - Improve the unit tests.
 - Code clean-up.
 - Prereqs: decrease the output by default.
