Update the ChangeLog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@7989 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: bd5720a35b758faa1a22fcd84826cf8bdb3d386c

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 6.0.2 (not yet released):
+- Improve unit tests.
 - Fix a bug in OS_Settings when falling back to the default settings.
+- Update ORM to 1.2.1.
 - Update SystemInstaller to 2.3.10.
 - Improve the unit tests.
 - Code clean-up.
