Update the ChangeLog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8008 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 33d10a372fb4f8d43de48086733536d59ba3258e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 6.0.2 (not yet released):
+- Update ODA to 1.4.
 - [Ticket #519] Re-introduce the startover capability (via oscar-config
 --startover command).
 - Add the mysql support to OS_Settings and OSCAR::SystemServices.
