Fix a typo in the changelog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8014 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 096ce6536de18a839d1d702c99a9501764fba6e0

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,7 +13,7 @@ script.
 - Improve the unit tests.
 - Code clean-up.
 - Prereqs: decrease the output by default.
-- Prereqs: update the prereq API to make more coherent
+- Prereqs: update the prereq API to make it more coherent
 - Update OS_Settings.
 - Wizard GUI: make the "delete client" visible all the time.
 - Port the management of the /etc/init.d/systemimager-server-monitord service
