--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 6.0.2 (not yet released):
+- Add an "experimental" package set.
 - [Ticket #483] Remove code duplication between MAC.pm and MACops.pm.
 - Update ODA to 1.4.
 - [Ticket #519] Re-introduce the startover capability (via oscar-config
@@ -10,6 +11,7 @@ script.
 - Fix a bug in OS_Settings when falling back to the default settings.
 - Update ORM to 1.2.1.
 - Update SystemInstaller to 2.3.10.
+- Update PackMan to 3.1.6.
 - Improve the unit tests.
 - Code clean-up.
 - Prereqs: decrease the output by default.
