Update the ChangeLog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8040 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: ed5da4e6527981438d9210cba8777442177ea1cb

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
 script.
 - Improve unit tests.
 - Fix a bug in OS_Settings when falling back to the default settings.
+- Update Yume to 2.8.5.
+- Update Opium to 1.2.2.
 - Update ODA to 1.4.
 - Update ORM to 1.2.1.
 - Update SystemInstaller to 2.3.10.
