Update the ChangeLog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8047 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 305ef445600151e908808c3ae5bf9669fbc2dee4

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@
 script.
 - Improve unit tests.
 - Fix a bug in OS_Settings when falling back to the default settings.
+- Update Configurator to 1.0.1.
 - Update Yume to 2.8.5.
 - Update Opium to 1.2.2.
 - Update ODA to 1.4.
