--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 6.0.2 (not yet released):
+- Move Selector code to the Selector package source tree.
 - Add "OSCAR::ClientMgt::cleanup_clients()" function that cleans the system up
 regarding clients definition. The function is currently used only before the
 definition of clients, to be sure we won't face any problems during the actual
