Update the ChangeLog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8096 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 353a599866cb37fabda6ffca0553e29153d9aa9a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 6.0.2 (not yet released):
+- Update the image creation parameters so we can overwrite the list of binary
+packages to install in a image for a given Linux distribution.
 - Move Selector code to the Selector package source tree.
 - Add "OSCAR::ClientMgt::cleanup_clients()" function that cleans the system up
 regarding clients definition. The function is currently used only before the
