--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
 6.0.2 (not yet released):
+- Correctly generate the /etc/c3.conf file.
+- Make sure the node deletion does not fail when we do not have connectivity
+with compute nodes.
+- Fix various issues with the ODA api-pre-install script.
+- Fix a bootstrap issue: the API side of all core packages is now
+automatically installed.
+- Fix different buggy corner cases when creating images.
 - Fix a bug when OSCAR updates the /etc/hosts file.
 - Update the image creation parameters so we can overwrite the list of binary
 packages to install in a image for a given Linux distribution.
