Update the ChangeLog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8195 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 3f1e733ff06e0b57114f1b82b9a12284a4310cdd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 6.0.2 (not yet released):
+- Update the list of binary packages installed in all Debian based images.
 - Fix various issues with the SIS api-post-image script.
 - Correctly generate the /etc/c3.conf file.
 - Make sure the node deletion does not fail when we do not have connectivity
