--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 6.0.2 (not yet released):
+- Include mirroring capabilities for yum repositories.
 - Update the list of binary packages installed in all Debian based images.
 - Fix various issues with the SIS api-post-image script.
 - Correctly generate the /etc/c3.conf file.
@@ -26,13 +27,16 @@ script.
 - Improve unit tests.
 - Fix a bug in OS_Settings when falling back to the default settings.
 - Update Configurator to 1.0.1.
-- Update Yume to 2.8.5.
+- Update Yume to 2.8.6.
+- Update RAPT to 2.8.4.
 - Update Opium to 1.3.
-- Update ODA to 1.4.1.
+- Update ODA to 1.4.2.
 - Update ORM to 1.2.1.
 - Update SystemInstaller to 2.3.12.
-- Update PackMan to 3.1.6.
+- Update PackMan to 3.1.8.
 - Update Selector to 1.1.1.
+- Update c3 to 5.0.1.
+- Update sc3 to 1.2.3.
 - Improve the unit tests.
 - Code clean-up.
 - Prereqs: decrease the output by default.
