Prepare the 6.0.2 release.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8253 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: fab3f654e39cfc5191343a086ea11c0bdf34a907

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oscar (6.0.2-1) hardy; urgency=low
+
+  * New upstream version.
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Wed, 18 Mar 2009 18:55:26 -0400
+
 oscar (6.0.1-1) hardy; urgency=low
 
   * New upstream version.
