Update the ChangeLog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8379 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 7dbacd56a117637c1f3bb158179821d273081481

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,13 @@
+6.0.3 (not yet released):
+- Update CentOS-5 support to CentOS-5.3.
+- Improve source code documentation.
+- [Ticket #477] Specify and implement the management of distribution's
+codename, mandatory for Debian based systems.
+- [Ticket #517] Correctly detect all Ubuntu distros.
+- [Ticket #524] Prereq status detection is now fixed.
+
 6.0.2:
+- Fix the oscar_image_cleanup script.
 - Include mirroring capabilities for yum repositories.
 - Update the list of binary packages installed in all Debian based images.
 - Fix various issues with the SIS api-post-image script.
