Update the ChangeLog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8390 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 58d7202091178e601f3dd0dc04a55c6ad1406b1e

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
 codename, mandatory for Debian based systems.
 - [Ticket #517] Correctly detect all Ubuntu distros.
 - [Ticket #524] Prereq status detection is now fixed.
+- [Ticker #540] OSCAR::ConfigFile now ignores comments when getting the list
+of blocks from a config file.
 
 6.0.2:
 - Fix the oscar_image_cleanup script.
