Automatically execute oscar-packager when installing a new version of the oscar-base RPMs. That was already available for Debian packages so now we can concider it like a normal behavior for any oscar-base binary packages. Update the ChangeLog accordingly.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8397 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: aac0ca121a64b26197d9242763e5a7afeb507979

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@ codename, mandatory for Debian based systems.
 - [Ticket #524] Prereq status detection is now fixed.
 - [Ticker #540] OSCAR::ConfigFile now ignores comments when getting the list
 of blocks from a config file.
+- Automatically run oscar-updater when installing a new version of the
+oscar-base packages.
 
 6.0.2:
 - Fix the oscar_image_cleanup script.
